sas-bases/components/security/network/route.openshift.io/route/front-door-tls/sas-deployment-data-transformers.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-deployment-data-route-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: replace
    path: /spec/tls
    value:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
  - op: add
    path: /metadata/annotations/cert-utils-operator.redhat-cop.io~1certs-from-secret
    value: sas-ingress-certificate
target:
  kind: Route
  group: route.openshift.io
  version: v1
  name: sas-deployment-data
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-deployment-data-multitenant-route-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: replace
    path: /spec/tls
    value:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
  - op: add
    path: /metadata/annotations/cert-utils-operator.redhat-cop.io~1certs-from-secret
    value: sas-ingress-certificate
target:
  kind: Route
  group: route.openshift.io
  version: v1
  name: sas-deployment-data-multitenant
  
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-licenses-route-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: replace
    path: /spec/tls
    value:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
  - op: add
    path: /metadata/annotations/cert-utils-operator.redhat-cop.io~1certs-from-secret
    value: sas-ingress-certificate
target:
  kind: Route
  group: route.openshift.io
  version: v1
  name: sas-licenses
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-licenses-multitenant-route-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: replace
    path: /spec/tls
    value:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
  - op: add
    path: /metadata/annotations/cert-utils-operator.redhat-cop.io~1certs-from-secret
    value: sas-ingress-certificate
target:
  kind: Route
  group: route.openshift.io
  version: v1
  name: sas-licenses-multitenant
  
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-metering-route-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: replace
    path: /spec/tls
    value:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
  - op: add
    path: /metadata/annotations/cert-utils-operator.redhat-cop.io~1certs-from-secret
    value: sas-ingress-certificate
target:
  kind: Route
  group: route.openshift.io
  version: v1
  name: sas-metering
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-metering-multitenant-route-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: replace
    path: /spec/tls
    value:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
  - op: add
    path: /metadata/annotations/cert-utils-operator.redhat-cop.io~1certs-from-secret
    value: sas-ingress-certificate
target:
  kind: Route
  group: route.openshift.io
  version: v1
  name: sas-metering-multitenant
